--- a/.env
+++ b/.env
@@ -37,3 +37,9 @@ MAILER_URL=null://localhost
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=a94d0fbebe87ebb233560bb65d69e108
+###< lexik/jwt-authentication-bundle ###
