--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "dotenv": "^8.2.0",
+        "jwt-decode": "^2.2.0",
         "react": "^16.8.6",
+        "react-content-loader": "^4.3.2",
         "react-dom": "^16.8.6",
-        "react-router-dom": "^5.0.0"
+        "react-router-dom": "^5.0.0",
+        "react-toastify": "^5.4.0"
     }
 }
