--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,7 +46,7 @@ security:
   access_control:
      - { path: ^/api/customers, roles: IS_AUTHENTICATED_FULLY }
      - { path: ^/api/invoices, roles: IS_AUTHENTICATED_FULLY }
-     - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY, methods:[GET, PUT, DELETE] }
+     - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods:[GET, PUT, DELETE] }
      - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
