--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,3 +50,5 @@ security:
      - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
+  role_hierarchy:
+      ROLE_ADMIN: ROLE_USER
